Bug 750417 - Remove Redraw calls from nsSprocketLayout. r=roc